# pkg/apiclient/models/apiserver_team_service_plan.go
@@ -1,102 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-	"github.com/go-openapi/validate"
-)
-
-// ApiserverTeamServicePlan apiserver team service plan
-//
-// swagger:model apiserver.TeamServicePlan
-type ApiserverTeamServicePlan struct {
-
-	// parameter editable
-	// Required: true
-	ParameterEditable map[string]bool `json:"parameterEditable"`
-
-	// schema
-	// Required: true
-	Schema *string `json:"schema"`
-
-	// service plan
-	ServicePlan *V1ServicePlanSpec `json:"servicePlan,omitempty"`
-}
-
-// Validate validates this apiserver team service plan
-func (m *ApiserverTeamServicePlan) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateParameterEditable(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validateSchema(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validateServicePlan(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *ApiserverTeamServicePlan) validateParameterEditable(formats strfmt.Registry) error {
-
-	return nil
-}
-
-func (m *ApiserverTeamServicePlan) validateSchema(formats strfmt.Registry) error {
-
-	if err := validate.Required("schema", "body", m.Schema); err != nil {
-		return err
-	}
-
-	return nil
-}
-
-func (m *ApiserverTeamServicePlan) validateServicePlan(formats strfmt.Registry) error {
-
-	if swag.IsZero(m.ServicePlan) { // not required
-		return nil
-	}
-
-	if m.ServicePlan != nil {
-		if err := m.ServicePlan.Validate(formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("servicePlan")
-			}
-			return err
-		}
-	}
-
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *ApiserverTeamServicePlan) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *ApiserverTeamServicePlan) UnmarshalBinary(b []byte) error {
-	var res ApiserverTeamServicePlan
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
