# pkg/apiclient/operations/get_service_plan_details_responses.go
@@ -1,0 +1,189 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"fmt"
+	"io"
+
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/strfmt"
+
+	"github.com/appvia/kore/pkg/apiclient/models"
+)
+
+// GetServicePlanDetailsReader is a Reader for the GetServicePlanDetails structure.
+type GetServicePlanDetailsReader struct {
+	formats strfmt.Registry
+}
+
+// ReadResponse reads a server response into the received o.
+func (o *GetServicePlanDetailsReader) ReadResponse(response runtime.ClientResponse, consumer runtime.Consumer) (interface{}, error) {
+	switch response.Code() {
+	case 200:
+		result := NewGetServicePlanDetailsOK()
+		if err := result.readResponse(response, consumer, o.formats); err != nil {
+			return nil, err
+		}
+		return result, nil
+	case 401:
+		result := NewGetServicePlanDetailsUnauthorized()
+		if err := result.readResponse(response, consumer, o.formats); err != nil {
+			return nil, err
+		}
+		return nil, result
+	case 403:
+		result := NewGetServicePlanDetailsForbidden()
+		if err := result.readResponse(response, consumer, o.formats); err != nil {
+			return nil, err
+		}
+		return nil, result
+	case 404:
+		result := NewGetServicePlanDetailsNotFound()
+		if err := result.readResponse(response, consumer, o.formats); err != nil {
+			return nil, err
+		}
+		return nil, result
+	case 500:
+		result := NewGetServicePlanDetailsInternalServerError()
+		if err := result.readResponse(response, consumer, o.formats); err != nil {
+			return nil, err
+		}
+		return nil, result
+
+	default:
+		return nil, runtime.NewAPIError("unknown error", response, response.Code())
+	}
+}
+
+// NewGetServicePlanDetailsOK creates a GetServicePlanDetailsOK with default headers values
+func NewGetServicePlanDetailsOK() *GetServicePlanDetailsOK {
+	return &GetServicePlanDetailsOK{}
+}
+
+/*GetServicePlanDetailsOK handles this case with default header values.
+
+Contains the service plan details
+*/
+type GetServicePlanDetailsOK struct {
+	Payload *models.KoreServicePlanDetails
+}
+
+func (o *GetServicePlanDetailsOK) Error() string {
+	return fmt.Sprintf("[GET /api/v1alpha1/serviceplans/{name}/details][%d] getServicePlanDetailsOK  %+v", 200, o.Payload)
+}
+
+func (o *GetServicePlanDetailsOK) GetPayload() *models.KoreServicePlanDetails {
+	return o.Payload
+}
+
+func (o *GetServicePlanDetailsOK) readResponse(response runtime.ClientResponse, consumer runtime.Consumer, formats strfmt.Registry) error {
+
+	o.Payload = new(models.KoreServicePlanDetails)
+
+	// response payload
+	if err := consumer.Consume(response.Body(), o.Payload); err != nil && err != io.EOF {
+		return err
+	}
+
+	return nil
+}
+
+// NewGetServicePlanDetailsUnauthorized creates a GetServicePlanDetailsUnauthorized with default headers values
+func NewGetServicePlanDetailsUnauthorized() *GetServicePlanDetailsUnauthorized {
+	return &GetServicePlanDetailsUnauthorized{}
+}
+
+/*GetServicePlanDetailsUnauthorized handles this case with default header values.
+
+If not authenticated
+*/
+type GetServicePlanDetailsUnauthorized struct {
+}
+
+func (o *GetServicePlanDetailsUnauthorized) Error() string {
+	return fmt.Sprintf("[GET /api/v1alpha1/serviceplans/{name}/details][%d] getServicePlanDetailsUnauthorized ", 401)
+}
+
+func (o *GetServicePlanDetailsUnauthorized) readResponse(response runtime.ClientResponse, consumer runtime.Consumer, formats strfmt.Registry) error {
+
+	return nil
+}
+
+// NewGetServicePlanDetailsForbidden creates a GetServicePlanDetailsForbidden with default headers values
+func NewGetServicePlanDetailsForbidden() *GetServicePlanDetailsForbidden {
+	return &GetServicePlanDetailsForbidden{}
+}
+
+/*GetServicePlanDetailsForbidden handles this case with default header values.
+
+If authenticated but not authorized
+*/
+type GetServicePlanDetailsForbidden struct {
+}
+
+func (o *GetServicePlanDetailsForbidden) Error() string {
+	return fmt.Sprintf("[GET /api/v1alpha1/serviceplans/{name}/details][%d] getServicePlanDetailsForbidden ", 403)
+}
+
+func (o *GetServicePlanDetailsForbidden) readResponse(response runtime.ClientResponse, consumer runtime.Consumer, formats strfmt.Registry) error {
+
+	return nil
+}
+
+// NewGetServicePlanDetailsNotFound creates a GetServicePlanDetailsNotFound with default headers values
+func NewGetServicePlanDetailsNotFound() *GetServicePlanDetailsNotFound {
+	return &GetServicePlanDetailsNotFound{}
+}
+
+/*GetServicePlanDetailsNotFound handles this case with default header values.
+
+the service plan with the given name doesn't exist
+*/
+type GetServicePlanDetailsNotFound struct {
+}
+
+func (o *GetServicePlanDetailsNotFound) Error() string {
+	return fmt.Sprintf("[GET /api/v1alpha1/serviceplans/{name}/details][%d] getServicePlanDetailsNotFound ", 404)
+}
+
+func (o *GetServicePlanDetailsNotFound) readResponse(response runtime.ClientResponse, consumer runtime.Consumer, formats strfmt.Registry) error {
+
+	return nil
+}
+
+// NewGetServicePlanDetailsInternalServerError creates a GetServicePlanDetailsInternalServerError with default headers values
+func NewGetServicePlanDetailsInternalServerError() *GetServicePlanDetailsInternalServerError {
+	return &GetServicePlanDetailsInternalServerError{}
+}
+
+/*GetServicePlanDetailsInternalServerError handles this case with default header values.
+
+A generic API error containing the cause of the error
+*/
+type GetServicePlanDetailsInternalServerError struct {
+	Payload *models.ApiserverError
+}
+
+func (o *GetServicePlanDetailsInternalServerError) Error() string {
+	return fmt.Sprintf("[GET /api/v1alpha1/serviceplans/{name}/details][%d] getServicePlanDetailsInternalServerError  %+v", 500, o.Payload)
+}
+
+func (o *GetServicePlanDetailsInternalServerError) GetPayload() *models.ApiserverError {
+	return o.Payload
+}
+
+func (o *GetServicePlanDetailsInternalServerError) readResponse(response runtime.ClientResponse, consumer runtime.Consumer, formats strfmt.Registry) error {
+
+	o.Payload = new(models.ApiserverError)
+
+	// response payload
+	if err := consumer.Consume(response.Body(), o.Payload); err != nil && err != io.EOF {
+		return err
+	}
+
+	return nil
+}
